@@ -73,6 +73,12 @@ platform_set_blocksize(int fd, char *path, int blocksize)
 {
 }
 
+int
+platform_get_blocksize(int fd, char *path)
+{
+	return BBSIZE;
+}
+
 void
 platform_flush_device(int fd)
 {
