@@ -54,6 +54,12 @@ platform_set_blocksize(int fd, char *path, int blocksize)
 }
 
 void
+platform_get_blocksize(int fd, char *path)
+{
+	return BBSIZE;
+}
+
+void
 platform_flush_device(int fd)
 {
 	return;
